Refactored transactions folder, generalized batchers to Module level actors with Guice injection, added LithosDexBatching, changed core chaining and failure handling in batching, and added best effort package creation when candidate sources time out.